#308912 by sun: Fixed alignment of editor buttons in TinyMCE 3.

--- a/editors/css/tinymce-3.css
+++ b/editors/css/tinymce-3.css
@@ -9,13 +9,12 @@
 .mceToolbar td {
   display: inline;
 }
-.mceToolbar a {
-  float: left;
-}
+.mceToolbar a,
 .mceSeparator {
   float: left;
 }
-.mceListBox {
+.mceListBox,
+.mceSplitButton {
   float: left;
   margin-bottom: 1px;
 }
